loads more refactoring, close to alpha ready

--- a/theme/sass/_base.scss
+++ b/theme/sass/_base.scss
@@ -29,6 +29,7 @@ $width-header: 50px;
 $width-sidebar-first-region: 280px;
 $width-sidebar-first: $width-sidebar-first-region + $width-header;
 $width-sidebar-second:360px;
+$width-sidebar-second-small:260px;
 
 
 //imports
