refactoring and readme

--- a/theme/sass/breakpoints/_1382.scss
+++ b/theme/sass/breakpoints/_1382.scss
@@ -7,6 +7,7 @@ body {
 
   // Files
   &.section-files {
+    #page-header h1 a,
     #sidebar-first {
       width: $width-sidebar-first * 1.5;
     }
